--- a/source code/templates/index2.html
+++ b/source code/templates/index2.html
@@ -86,13 +86,12 @@
             <a href="#" class="filter-link active" data-filter-id="0">Todos</a>
             <a href="#" class="filter-link" data-filter-id="1">Proteínas</a>
             <a href="#" class="filter-link" data-filter-id="2">Creatinas</a>
-            <a href="#" class="filter-link" data-filter-id="3">Mass Gainer</a>
-            <a href="#" class="filter-link" data-filter-id="4">Aminoácido</a>
-            <a href="#" class="filter-link" data-filter-id="5">Pre-Entreno</a>
-            <a href="#" class="filter-link" data-filter-id="6">Glutamina</a>
+            <a href="#" class="filter-link" data-filter-id="3">Mass Gainers</a>
+            <a href="#" class="filter-link" data-filter-id="4">Aminoácidos</a>
+            <a href="#" class="filter-link" data-filter-id="5">Pre-Entrenos</a>
+            <a href="#" class="filter-link" data-filter-id="6">Glutaminas</a>
             <a href="#" class="filter-link" data-filter-id="7">Shakers</a>
-            <a href="#" class="filter-link" data-filter-id="8">Colageno</a>
-            <a href="#" class="filter-link" data-filter-id="9">Suplementos Varios</a>
+            <a href="#" class="filter-link" data-filter-id="8">Colagenos</a>
         </div>
     </nav>
 
