--- a/source code/templates/index2.html
+++ b/source code/templates/index2.html
@@ -90,8 +90,9 @@
             <a href="#" class="filter-link" data-filter-id="4">Aminoácidos</a>
             <a href="#" class="filter-link" data-filter-id="5">Pre-Entrenos</a>
             <a href="#" class="filter-link" data-filter-id="6">Glutaminas</a>
-            <a href="#" class="filter-link" data-filter-id="7">Shakers</a>
-            <a href="#" class="filter-link" data-filter-id="8">Colagenos</a>
+            <a href="#" class="filter-link" data-filter-id="7">Shaker y bebidas</a>
+            <a href="#" class="filter-link" data-filter-id="8">Colageno</a>
+
         </div>
     </nav>
 
@@ -118,10 +119,8 @@
 
         <div class="footer-col okami-links">
             <h2 class="hidden-title">Okami</h2> <ul class="link-list">
-                <li><a href="#">Okami</a></li>
-                <li><a href="#">Quienes somos</a></li>
-                <li><a href="#">vision</a></li>
-                <li><a href="#">ubicaciones</a></li>
+                <li><a href="Vision.pdf">Quienes somos y que vision tenemos</a></li>
+                <li><a href="#">Estamos ubicados en Limon y San Jose</a></li>
             </ul>
         </div>
     </div>
