nuevas modificacion en la app 2.0

--- a/source code/templates/index.html
+++ b/source code/templates/index.html
@@ -64,9 +64,9 @@
                         <label for="new-product-image-file">Subir Imagen:</label>
                         <input type="file" id="new-product-image-file" name="imagen" accept="image/*" required>
 
-                        <h4>Stock Inicial por Variante (Peso/Sabor):</h4>
-                        <div id="new-product-stock-inputs" class="stock-inputs-grid">
-                            </div>
+                        <label for="new-product-stock">Stock Disponible:</label>
+                        <input type="number" id="new-product-stock" name="stock" required min="0">
+
 
                         <button type="submit" class="action-btn primary">Guardar Producto</button>
                     </form>
